--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "dev": "DEBUG=project-management:* nodemon ./bin/www",
     "start": "node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "mongodb": "^4.2.1",
+    "mongoose": "^6.0.15",
+    "morgan": "~1.9.1",
+    "needle": "^3.0.0",
+    "nodemon": "^2.0.15"
   }
 }
