--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "mapbox-gl": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.18",
     "react-scripts": "4.0.3",
     "sass": "^1.44.0",
     "web-vitals": "^1.1.2"
