--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "dashboard-with-backend",
   "version": "0.0.0",
   "private": true,
- 
   "scripts": {
     "dev": "DEBUG=project-management:* nodemon ./bin/www",
     "start": "node ./bin/www",
@@ -20,6 +19,7 @@
     "mongoose": "^6.0.15",
     "morgan": "~1.9.1",
     "needle": "^3.0.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "react-map-gl": "^6.1.18"
   }
 }
